# django-monaco-editor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pr-checks.yml  publish-pypi.yml  release.yml  security.yml  stale.yml
django_monaco_editor/: __init__.py  apps.py  conf.py  fields.py  widgets.py
django_monaco_editor/templates/django_monaco_editor/: monaco_widget.html
